// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders Checked 1`] = `
<label
  className="sc-DJmSI jVvJMs"
>
  <input
    checked={true}
    className="sc-ewgOdx dOvzjj"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-bQRcPC gExgtO"
  >
    <span
      className="sc-fJoEar dIVGzC"
    >
      <div
        checked={true}
        className="sc-bhpuBD lbQswx"
      />
    </span>
    <p
      className="sc-cbDwiu cHxPAS"
      size={14}
    >
      Checkbox with checked state by default
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Disabled 1`] = `
<label
  className="sc-DJmSI jVvJMs"
>
  <input
    className="sc-ewgOdx dOvzjj"
    disabled={true}
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-bQRcPC gExgtO"
  >
    <span
      className="sc-fJoEar dIVGzC"
    >
      <div
        checked={false}
        className="sc-bhpuBD eeoPXQ"
      />
    </span>
    <p
      className="sc-cbDwiu cHxPAS"
      size={14}
    >
      Disabled Checkbox
    </p>
  </div>
</label>
`;

exports[`Checkbox renders No label 1`] = `
<label
  className="sc-DJmSI jVvJMs"
>
  <input
    className="sc-ewgOdx dOvzjj"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-bQRcPC gExgtO"
  >
    <span
      className="sc-fJoEar dIVGzC"
    >
      <div
        checked={false}
        className="sc-bhpuBD eeoPXQ"
      />
    </span>
  </div>
</label>
`;

exports[`Checkbox renders Read only 1`] = `
<label
  className="sc-DJmSI jVvJMs"
>
  <input
    className="sc-ewgOdx dOvzjj"
    onClick={[Function]}
    readOnly={true}
    type="checkbox"
  />
  <div
    className="sc-bQRcPC gExgtO"
  >
    <span
      className="sc-fJoEar dIVGzC"
    >
      <div
        checked={false}
        className="sc-bhpuBD eeoPXQ"
      />
    </span>
    <p
      className="sc-cbDwiu cHxPAS"
      size={14}
    >
      Readonly checkbox
    </p>
  </div>
</label>
`;

exports[`Checkbox renders default 1`] = `
<label
  className="sc-DJmSI jVvJMs"
>
  <input
    className="sc-ewgOdx dOvzjj"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-bQRcPC gExgtO"
  >
    <span
      className="sc-fJoEar dIVGzC"
    >
      <div
        checked={false}
        className="sc-bhpuBD eeoPXQ"
      />
    </span>
    <p
      className="sc-cbDwiu cHxPAS"
      size={14}
    >
      Default Checkbox
    </p>
  </div>
</label>
`;
